# cmc_ps-oct_registration

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  README.md  file.tree  psoct_wrapper.py  pyproject.toml  requirements.txt  setup.cfg
cmcmultimodal/: io.py  proc.py  utils.py  validate_results.py
cmcmultimodal/config/: file.tree  fnirt_config
cmcmultimodal/core/: io.py  proc.py  utils.py
cmcmultimodal/notebooks/: CMC_restructure_test.ipynb
cmcmultimodal/scripts/: psoct_wrapper.py
cmcmultimodal/utils/: create_movie.py  validate_results.py
notebooks/: CMC_restructure_test.ipynb
tests/: test_notebook_conversion.py  test_psoct_proc.py
