[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcmultimodal"
version = "0.1.0"
description = "Tools for processing CMC multimodal data."
authors = [
    {name="Saad Jbabdi", email="saad.jbabdi@ndcn.ox.ac.uk"},
    {name="Vasilis Karlaftis", email="vasilis.karlaftis@ndcn.ox.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "fslpy",
    "matplotlib"
]

[tool.setuptools]
packages = ["cmcmultimodal"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]